--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        " 'weather_app']"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        "[]"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,93 +500,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 244,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NASA's Curiosity Rover Finds an Ancient Oasis on Mars\n",
-      "8 Martian Postcards to Celebrate Curiosity's Landing Anniversary\n",
-      "Mars InSight Lander to Push on Top of the 'Mole'\n",
-      "A Year of Surprising Science From NASA's InSight Mars Mission\n",
-      "NASA Engineers Checking InSight's Weather Sensors\n",
-      "The MarCO Mission Comes to an End\n",
-      "NASA's Perseverance Rover Will Peer Beneath Mars' Surface \n",
-      "Meet the People Behind NASA's Perseverance Rover\n",
-      "NASA's Mars Helicopter Attached to Mars 2020 Rover \n",
-      "Three New Views of Mars' Moon Phobos\n",
-      "What's Mars Solar Conjunction, and Why Does It Matter?\n",
-      "How NASA's Mars Helicopter Will Reach the Red Planet's Surface\n",
-      "NASA's Treasure Map for Water Ice on Mars\n",
-      "Follow NASA's Perseverance Rover in Real Time on Its Way to Mars\n",
-      "NASA's Mars 2020 Heads Into the Test Chamber\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "html = browser.html\n",
     "soup = BeautifulSoup(html, 'html.parser')\n",
     "\n",
     "titles = soup.find_all('div', class_='content_title')\n",
     "\n",
+    "# for title in titles:\n",
+    "#     print(title.text)\n",
+    "    \n",
+    "article_title_list = []\n",
+    "\n",
+    "\n",
     "for title in titles:\n",
-    "    print(title.text)\n",
-    "# categories = sidebar.find_all('li')\n",
-    "\n",
-    "# category_list = []\n",
-    "# url_list = []\n",
-    "# book_url_list = []\n",
-    "# for category in categories:\n",
-    "#     title = category.text.strip()\n",
-    "#     category_list.append(title)\n",
-    "#     book_url = category.find('a')['href']\n",
-    "#     url_list.append(book_url)\n",
-    "\n",
-    "# book_url_list = ['http://books.toscrape.com/' + url for url in url_list]\n",
-    "\n",
-    "# titles_and_urls = zip(category_list, book_url_list)\n",
-    "\n",
-    "# try:\n",
-    "#     for title_url in titles_and_urls:\n",
-    "#         browser.links.find_by_partial_text('next').click()\n",
-    "# except ElementDoesNotExist:\n",
-    "#     print(\"Scraping Complete\")"
+    "    featured_article_title = title.text\n",
+    "    article_title_list.append(featured_article_title)\n",
+    "     \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "New evidence suggests salty, shallow ponds once dotted a Martian crater — a sign of the planet's drying climate.\n",
-      "The NASA rover touched down eight years ago, on Aug. 5, 2012, and will soon be joined by a second rover, Perseverance.\n",
-      "Engineers have a plan for pushing down on the heat probe, which has been stuck at the Martian surface for a year.\n",
-      "A batch of new papers summarizes the lander's findings above and below the surface of the Red Planet.\n",
-      "An electronics issue is suspected to be preventing the sensors from sharing their data about Mars weather with the spacecraft.\n",
-      "The pair of briefcase-sized satellites made history when they sailed past Mars in 2019.\n",
-      "The agency's newest rover will use the first ground-penetrating radar instrument on the Martian surface to help search for signs of past microbial life. \n",
-      "These are the scientists and engineers who built NASA's next Mars rover and who will guide it to a safe landing in Jezero Crater. \n",
-      "The helicopter will be first aircraft to perform flight tests on another planet.\n",
-      "Taken with the infrared camera aboard NASA's Odyssey orbiter, they reveal temperature variations on the small moon as it drifts into and out of Mars’ shadow.\n",
-      "NASA spacecraft at Mars are going to be on their own for a few weeks when the Sun comes between Mars and Earth, interrupting communications.\n",
-      "The small craft will seek to prove that powered, controlled flight is possible on another planet. But just getting it onto the surface of Mars will take a whole lot of ingenuity.\n",
-      "A new study identifies frozen water just below the Martian surface, where astronauts could easily dig it up.\n",
-      "A crisply rendered web application can show you where the agency's Mars 2020 mission is right now as it makes its way to the Red Planet for a Feb. 18, 2021, landing.\n",
-      "In this time-lapse video taken at JPL, engineers move the Mars 2020 rover into a large vacuum chamber for testing in Mars-like environmental conditions.\n"
+      "['The Man Who Wanted to Fly on Mars', \"NASA's Push to Save the Mars InSight Lander's Heat Probe\", \"The Detective Aboard NASA's Perseverance Rover\", \"Deadline Closing for Names to Fly on NASA's Next Mars Rover\", \"NASA's Perseverance Mars Rover Gets Balanced\", 'Scientists Explore Outback as Testbed for Mars ', 'NASA Perseverance Mars Rover Scientists Train in the Nevada Desert', \"Media Get a Close-Up of NASA's Mars 2020 Rover\", \"A Year of Surprising Science From NASA's InSight Mars Mission\", \"NASA Readies Perseverance Mars Rover's Earthly Twin \", \"NASA's Mars 2020 Will Hunt for Microscopic Fossils\", 'NASA to Hold Mars 2020 Perseverance Rover Launch Briefing', \"Three New Views of Mars' Moon Phobos\", '7 Things to Know About the Mars 2020 Perseverance Rover Mission', 'NASA Administrator Statement on Moon to Mars Initiative, FY 2021 Budget']\n"
      ]
     }
    ],
    "source": [
+    "print(article_title_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "article_teaser = soup.find_all('div', class_='article_teaser_body')\n",
     "\n",
+    "article_teaser_list = []\n",
+    "\n",
+    "\n",
     "for article in article_teaser:\n",
-    "    print(article.text)"
+    "    featured_article_teaser = article.text\n",
+    "    article_teaser_list.append(featured_article_teaser)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"The Mars Helicopter is riding to the Red Planet this summer with NASA's Perseverance rover. The helicopter's chief engineer, Bob Balaram, shares the saga of how it came into being.\", \"The scoop on the end of the spacecraft's robotic arm will be used to 'pin' the mole against the wall of its hole.\", 'An instrument called SHERLOC will, with the help of its partner WATSON, hunt for signs of ancient life by detecting organic molecules and minerals.', 'You have until Sept. 30 to send your names to Mars aboard the Mars 2020 rover. ', \"The mission team performed a crucial weight-balancing test on the rover in preparation for this summer's history-making launch to the Red Planet.\", \"Australia provides a great place for NASA's Mars 2020 and the ESA-Roscosmos ExoMars scientists to hone techniques in preparation for searching for signs ancient life on Mars.\", \"Team members searched for signs of ancient microscopic life there, just as NASA's latest rover will on the Red Planet next year.\", \"The clean room at NASA's Jet Propulsion Laboratory was open to the media to see NASA's next Mars explorer before it leaves for Florida in preparation for a summertime launch.\", \"A batch of new papers summarizes the lander's findings above and below the surface of the Red Planet.\", \"Did you know NASA's next Mars rover has a nearly identical sibling on Earth for testing? Even better, it's about to roll for the first time through a replica Martian landscape.\", \"A new paper identifies a ring of minerals at the rover's landing site that are ideal for fossilizing microbial life.\", \"Learn more about the agency's next Red Planet mission during a live event on June 17.\", \"Taken with the infrared camera aboard NASA's Odyssey orbiter, they reveal temperature variations on the small moon as it drifts into and out of Mars’ shadow.\", \"NASA's next rover to the Red Planet is slated to launch no earlier than July 30. These highlights will get you up to speed on the ambitious mission.\", \"Jim Bridenstine addresses NASA's ambitious plans for the coming years, including Mars Sample Return.\"]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(article_teaser_list)"
    ]
   },
   {
